--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 alembic==1.4.2
+certifi==2020.4.5.1
+chardet==3.0.4
 click==7.1.2
 defusedxml==0.6.0
 Flask==1.1.2
@@ -7,6 +9,9 @@ Flask-Migrate==2.5.3
 Flask-OpenID==1.2.5
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
+Flask-WTF==0.14.3
+httplib2==0.17.3
+idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.2
 Mako==1.1.2
@@ -15,6 +20,9 @@ mysql-connector==2.2.9
 python-dateutil==2.8.1
 python-editor==1.0.4
 python3-openid==3.1.0
+requests==2.23.0
 six==1.14.0
 SQLAlchemy==1.3.16
+urllib3==1.25.9
 Werkzeug==1.0.1
+WTForms==2.3.1
